--- a/index.html
+++ b/index.html
@@ -13,11 +13,21 @@
       <header>
         <h1>Vadzim Embala</h1>
         <h4>CV &#8211; Software developer</h4>
+        <hr>
+        <nav class="menu">
+          <a href="#Contacts">Contacts</a> |
+          <a href="#AboutMe">About me</a> |
+          <a href="#Skills">Skills</a> |
+          <a href="#CodeExample">Code example</a> |
+          <a href="#WorkExpirience">Work expirience</a> |
+          <a href="#Education">Education</a> |
+          <a href="#English">English</a> 
+        </nav>
       </header>
       <hr>
       <main>
-        <div>
-          <h3>Contacts</h3>
+        <div id="Contacts">
+          <h2>Contacts</h2>
           <ul>
             <li>E-mail: 
               <a href="mailto:w660@live.ru">w660@live.ru</a>
@@ -28,16 +38,16 @@
           </ul>
         </div>
         <hr>
-        <section>
-          <h3>About me</h3>
+        <section id="AboutMe">
+          <h2>About me</h2>
           <p>
             I am a beginner software developer. My goal is to become a good front-end developer because 
             I enjoy creating. I have worked in the chemical industry 7 years. I'm a fast learner, hardworking and determined.
           </p>
         </section>
         <hr>
-        <div>
-          <h3>Skills</h3>
+        <div id="Skills">
+          <h2>Skills</h2>
             <ul>
               <li>HTML</li>
               <li>CSS</li>
@@ -47,8 +57,8 @@
             </ul>
         </div>
         <hr>
-        <div>
-          <h3>Code example</h3>
+        <div id="CodeExample">
+          <h2>Code example</h2>
           <div class="code">
             <pre>
   <code>function disemvowel(str) {
@@ -58,16 +68,16 @@
           </div>
         </div>
         <hr>
-        <div>
-          <h3>Work expirience</h3>
+        <div id="WorkExpirience">
+          <h2>Work expirience</h2>
             <ul>
               <li>From 2019 to 2021 I worked as a <i>production supervisor</i></li>
               <li>From 2017 to 2019 I worked as a <i>foreman</i></li>
             </ul>
         </div>
         <hr>
-        <div>
-          <h3>Education</h3>
+        <div id="Education">
+          <h2>Education</h2>
             <ul>
               <li>Belarusian State Technological University
                 <ul>
@@ -81,8 +91,8 @@
             </ul>
         </div>
         <hr>
-        <div>
-          <h3>English</h3>
+        <div id="English">
+          <h2>English</h2>
           <p>
             A2
           </p>
