feat: add  avatar img

--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
   </head>
   <body>
       <header>
-        <h1>Vadzim Embala</h1>
-        <h4>CV &#8211; Software developer</h4>
-        <hr>
+        <div>
+          <h1>Vadzim Embala</h1>
+          <h4>CV &#8211; Software developer</h4>
+        </div>
+        <div class="photo">
+          <img src="flat.jpg" alt="THE WORLD IS FLAT" width="222px">
+        </div>       
+      </header>
+      <hr>
+      <main>
         <nav class="menu">
           <a href="#Contacts">Contacts</a> |
           <a href="#AboutMe">About me</a> |
@@ -23,9 +30,7 @@
           <a href="#Education">Education</a> |
           <a href="#English">English</a> 
         </nav>
-      </header>
-      <hr>
-      <main>
+        <hr>
         <div id="Contacts">
           <h2>Contacts</h2>
           <ul>
