refactor: change format nav

--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
           <h4>CV &#8211; Software developer</h4>
         </div>
         <div class="photo">
-          <img src="flat.jpg" alt="THE WORLD IS FLAT" width="222px">
+          <img src="flat.jpg" alt="THE WORLD IS FLAT" width="222px" alt="THE WORLD IS FLAT">
         </div>       
       </header>
       <hr>
       <main>
-        <nav class="menu">
-          <a href="#Contacts">Contacts</a> |
-          <a href="#AboutMe">About me</a> |
-          <a href="#Skills">Skills</a> |
-          <a href="#CodeExample">Code example</a> |
-          <a href="#WorkExpirience">Work expirience</a> |
-          <a href="#Education">Education</a> |
-          <a href="#English">English</a> 
+        <nav align="center">
+          <ul class="hr">
+            <li><a href="#Contacts">Contacts</a></li>
+            <li><a href="#AboutMe">About me</a></li>
+            <li><a href="#Skills">Skills</a></li>
+            <li><a href="#CodeExample">Code example</a></li>
+            <li><a href="#WorkExpirience">Work expirience</a></li>
+            <li><a href="#Education">Education</a></li>
+            <li><a href="#English">English</a></li>
+          </ul>
         </nav>
         <hr>
         <div id="Contacts">
