feat: add Projects

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <h4>CV &#8211; Software developer</h4>
         </div>
         <div class="photo">
-          <img src="flat.jpg" alt="THE WORLD IS FLAT" width="222px" alt="THE WORLD IS FLAT">
+          <a href="https://ej252.github.io/rsschool-cv/"><img src="flat.jpg" alt="THE WORLD IS FLAT" width="222px" alt="THE WORLD IS FLAT"></a>
         </div>       
       </header>
       <hr>
@@ -27,6 +27,7 @@
             <li><a href="#AboutMe">About me</a></li>
             <li><a href="#Skills">Skills</a></li>
             <li><a href="#CodeExample">Code example</a></li>
+            <li><a href="#Projects">Projects</a></li>
             <li><a href="#WorkExpirience">Work expirience</a></li>
             <li><a href="#Education">Education</a></li>
             <li><a href="#English">English</a></li>
@@ -73,6 +74,13 @@
   }</code>
             </pre>
           </div>
+        </div>
+        <hr>
+        <div id="Projects">
+          <h2>Projects</h2>
+          <ul>
+            <li><a href="https://ej252.github.io/rsschool-cv/cv">Markdown & Git</a></li>
+          </ul>
         </div>
         <hr>
         <div id="WorkExpirience">
