--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
           <h4>CV &#8211; Software developer</h4>
         </div>
         <div class="photo">
-          <a href="https://ej252.github.io/rsschool-cv/"><img src="flat.jpg" alt="THE WORLD IS FLAT" width="222px" alt="THE WORLD IS FLAT"></a>
+          <a href="https://ej252.github.io/rsschool-cv/"><img src="flat.jpg" alt="THE WORLD IS FLAT" style="width: 222px;"></a>
         </div>       
       </header>
       <hr>
       <main>
-        <nav align="center">
+        <nav>
           <ul class="hr">
             <li><a href="#Contacts">Contacts</a></li>
             <li><a href="#AboutMe">About me</a></li>
