--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <h2>Contacts</h2>
           <ul>
             <li>E-mail: 
-              <a href="mailto:w660@live.ru">w660@live.ru</a>
+              <a href="mailto:embalo@outlook.com">embalo@outlook.com</a>
             </li>
             <li>WhatsApp: 
               <a href="https://api.whatsapp.com/send?phone=+966508178503">+966 50 817 8503</a>
