--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <li>E-mail: 
               <a href="mailto:embalo@outlook.com">embalo@outlook.com</a>
             </li>
+            <li>
+              <a href="https://discordapp.com/users/887690562847784971">discord</a>
+            </li>
             <li>WhatsApp: 
               <a href="https://api.whatsapp.com/send?phone=+966508178503">+966 50 817 8503</a>
             </li>
